adjusted font size in welcome text in media queries, will try to set a max-width for the project p tag to make sure to does not stretch too far

--- a/src/Styles/projects_section_styles.scss
+++ b/src/Styles/projects_section_styles.scss
@@ -147,6 +147,19 @@
     } 
 }
 
+
+
+
+@media (max-width: 430px) { 
+    .projects-section-wrapper p { 
+        font-size: 1rem !important;
+        max-width: 22em;
+    }
+}
+
+
+
+
 @keyframes grow { 
     0% { 
     transform: scale(0);
