--- a/src/Styles/welcome_header_main_styles.scss
+++ b/src/Styles/welcome_header_main_styles.scss
@@ -181,12 +181,12 @@ main {
     }
 
     .name-title-container h1{ 
-        font-size: 1.2rem;
+        font-size: 1.3rem;
         width: 100%;
     }
 
     .name-title-container p { 
-        font-size: 0.8rem;
+        font-size: 0.9rem;
     }
 
     // .name-title-container { 
